--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <script src="./node_modules/preline/dist/preline.js"></script> -->
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
-    <title>Vite + React</title>
+    <title>Roles-Profile</title>
   </head>
   <body>
     <div id="root"></div>
